test/errors/unexpected_indentation_1.dmd
  print(10)
print(20)

--- Output
Unexpected indent

1|   print(10)
     ^
---
